MARTAS provides tools and libraries for data acquisition
and collection from many different sources.
-------------------------------------------------
####v<0.1.4>, <2020-03-03> --

v0.1.4 additions:
    - 

v0.1.4 fixes:
    - collector.py: python3 header interpretation corrected

v0.1.4 improvements:

v0.1.4 removals:


####v<0.1.3>, <2019-09-30> --

v0.1.3 additions:
    - added telegrambot.py (config option still missing)
    - 

v0.1.3 fixes:
    - collector.py: default stationid does not override config any more
    - collector.py: stationid is not removed if contained in sensorid

v0.1.3 improvements:
    - martas.py (prepared e-mail notification, not yet available however) 
    - updated README for sensorid naming conventions

v0.1.3 removals:
    -


####v<0.1.1>, <2018-xx-xx> --

v0.1.1 additions:
    - deleteold.py added
    - added di.py method (app) to access, download, and analysze DI absolutes

v0.1.1 fixes:
    - supergrad file
    - ftp transfer in collectfile accepts port
    - install.marcos.sh: corrected linking and some spelling errors
    - cleanup now refers to /srv/mqtt

v0.1.1 improvements:
    - deleteold.py added (app) deleting old inputs in a database exceeding a defined age

v0.1.1 removals:
    -


-------------------------------------------------
####v<0.1.0>, <2018-11-22> --
     Initial start version including:
     + MARTAS (acquisition package)
       - Supported instruments:
          LEMI, POS1, GSM90/19, AD77, ...
       - Supported transfer protocols:
          MQTT

     + MARCOS (collection package)
       - MQTT (payloads: default, json)

     + many apps 